<resources>
    <string name="new_app_name">oost.app</string>
    <string name="new_title_activity_main">oost.app</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="service_2358_prepare">Продолжить</string>
    <string name="start">Старт</string>
    <string name="stop">Стоп</string>
    <string name="button_sell">Продать</string>
    <string name="update">Обновить</string>
    <string name="sort">Сортировка</string>
    <string name="orders">Заявки</string>
    <string name="restart">Рестарт</string>
    <string name="title_hour_1">1 час</string>
    <string name="title_hour_2">2 часа</string>
    <string name="account_tinkoff">Котлета ТИ: ✏️</string>
    <string name="account_alor">Котлета ALOR:️</string>
    <string name="accounts">Счета</string>
    <string name="sell_bid">продать в\nлучший бид</string>
    <string name="sell_ask">продать в\nлучший аск</string>
    <string name="sell_limit">создать\nлимитку</string>
    <string name="cancel_all2">Отменить всё</string>
    <string name="sell_tt">Продать с трейлинг-стопом</string>
    <string name="set_0">💼</string>
    <string name="set_1">1</string>
    <string name="set_2">2</string>
    <string name="set_3">3</string>
    <string name="set_4">4</string>
    <string name="set_love">❤️</string>
    <string name="start_telegram">Включить телеграм бота</string>
    <string name="start_follower">Включить команды</string>
    <string name="start_sell_700">ПРОДАТЬ 700</string>
    <string name="start_sell_1000">ПРОДАТЬ 1000</string>
    <string name="start_sell_now">ПРОДАТЬ СЕЙЧАС</string>
    <string name="start_buy_700">КУПИТЬ 700</string>
    <string name="start_buy_1000">КУПИТЬ 1000</string>
    <string name="start_buy_now">КУПИТЬ СЕЙЧАС</string>
    <string name="stop_700">СТОП 700</string>
    <string name="stop_1000">СТОП 1000</string>
    <string name="start_now">СТАРТ СЕЙЧАС</string>
    <string name="start_schedule">СТАРТ ПО РАСПИСАНИЮ</string>
    <string name="cancel_all">Отменить все</string>
    <string name="cancel">ОТМЕНА</string>
    <string name="prepare_start_2225_text">Запуск таймера на шорт: \nВремя: %s\nБумаг: %d\nСумма: %s</string>
    <string name="prepare_start_2358_text">Запуск таймера на покупку: \nВремя: %s\nБумаг: %d\nСумма: %s</string>
    <string name="prepare_start_1000_sell_text">Запуск таймера на продажу: \nВремя: %s\nБумаг: %d\nСумма: %s</string>
    <string name="prepare_start_1000_buy_text">Запуск таймера на покупку: \nВремя: %s\nБумаг: %d\nСумма: %s</string>
    <string name="sell_now_text">Создать заявки на продажу:\nБумаг: %d\nСумма: %s</string>
    <string name="prepare_start_tazik_buy_text">Базовая просадка: %s%%\nОбщая сумма: %s\nКоличество частей: %s\nБлижайшее расписание: от %s до %s</string>
    <string name="ticker">тикер</string>
    <string name="volume">объём</string>
    <string name="change">изменение</string>
    <string name="trailing_take">трейлинг тейк ✔</string>
    <string name="menu_settings">Настройки</string>
    <string name="menu_diagnostics">Диагностика</string>
    <string name="menu_donate">Донатики</string>
    <string name="menu_donate_description">Собираем на новые фичи</string>
    <string name="menu_portfolio">Депозит</string>
    <string name="menu_orders">Заявки</string>
    <string name="menu_reports">Отчёты, дивы, FDA</string>
    <string name="menu_shorts">% шорта</string>
    <string name="menu_orderbook">Стакан</string>
    <string name="menu_divindens">Дивиденды</string>
    <string name="menu_fda">FDA</string>
    <string name="menu_premarket">Премаркет</string>
    <string name="menu_1000_sell">700/1000 sell</string>
    <string name="menu_1000_buy">700/1000 buy</string>
    <string name="menu_2358">2258</string>
    <string name="menu_2225">2225 шорт ⚠️</string>
    <string name="menu_1728_up">1628 вверх</string>
    <string name="menu_1728_down">1628 вниз</string>
    <string name="menu_fixprice">Fix Price</string>
    <string name="menu_rocket">Ракеты</string>
    <string name="menu_blacklist">Чёрный список</string>
    <string name="menu_favorites">Избранные</string>
    <string name="menu_chart">График</string>
    <string name="menu_tazik">Автотазик</string>
    <string name="menu_tazik_endless">Бесконечный таз</string>
    <string name="menu_zontik_endless">Бесконечный зонт (шорт ️⚠️)</string>
    <string name="menu_day_low">2258 DAY LOW</string>
    <string name="menu_telegram">Телеграм бот</string>
    <string name="menu_trends">Тренды</string>
    <string name="menu_limits">Лимиты</string>
    <string name="menu_arbitration">Арбитраж</string>
    <string name="menu_sectors">Сектора</string>
    <string name="menu_chat">Что купить?</string>
    <string name="reports">ОТЧЁТЫ</string>
    <string name="dividends">ДИВЫ</string>
    <string name="fda">FDA</string>
    <string name="settings_header_broker">Активный брокер</string>
    <string name="settings_header_2358">Стратегия 2258</string>
    <string name="settings_header_1728">Стратегия 1628</string>
    <string name="settings_header_1000_sell">Стратегия 10:00:00 sell</string>
    <string name="settings_header_1000_buy">Стратегия 10:00:00 buy</string>
    <string name="settings_header_1005">Фильтр Премаркета</string>
    <string name="settings_header_tazik">Стратегия автотазик</string>
    <string name="settings_header_rocket">Ракеты</string>
    <string name="settings_header_trends">Тренды</string>
    <string name="settings_header_interface">Интерфейс</string>
    <string name="settings_header_telegram">Телеграм</string>
    <string name="settings_header_follower">Телеграм - команды</string>
    <string name="settings_header_2225">Стратегия 2225 шорт</string>
    <string name="dark_theme">Ночная тема</string>
    <string name="broker_tinkoff">Tinkoff Инвестиции</string>
    <string name="broker_alor">ALOR Инвестиции</string>
    <string name="tinkoff_header">Tinkoff</string>
    <string name="tinkoff_token_title">Tinkoff OpenAPI токен</string>
    <string name="tinkoff_broker_id">Номер брокерского счёта ТИ</string>
    <string name="alor_header">ALOR</string>
    <string name="alor_token_title">ALOR OpenAPI токен</string>
    <string name="alor_username">ALOR username (P123456)</string>
    <string name="alor_qoutes_title">Котировки ALOR</string>
    <string name="alor_orderbook_title">Стакан ALOR</string>
    <string name="alor_multiplier_money">Множитель суммы для всех стратегий (пример: 1.0 = точно такая же, 0.5 = половина)</string>
    <string name="pantini_header">John Pantini</string>
    <string name="pantini_telegram_id">Pantini: Телеграм ID</string>
    <string name="pantini_warden_token">Pantini: Warden Token</string>
    <string name="stocks_header">Общий фильтр на все экраны</string>
    <string name="stocks_usd_min">Цена min $</string>
    <string name="stocks_usd_max">Цена max $</string>
    <string name="stocks_allow_rus">РФ бумаги</string>
    <string name="stocks_trailing_stop">Трейлинг тейк-профит/стоп-лосс</string>
    <string name="stocks_trailing_stop_take_profit_percent_activation">Тейк-профит в %</string>
    <string name="stocks_trailing_stop_take_profit_percent_delta">Отклонение в %</string>
    <string name="stocks_trailing_stop_stop_loss_percent">Стоп-лосс в % (0.0 = без стоп-лосса)</string>
    <string name="stocks_trailing_stop_sell_best_bid">Продажа в лучший бид</string>
    <string name="orderbook_header">Стакан</string>
    <string name="orderbook_volumes">Размеры быстрого объёма (числа через пробел)</string>
    <string name="orderbook_prices">Размеры скальперских кнопок (через пробел)</string>
    <string name="stocks_2358_price_change_percent">Изменение от %</string>
    <string name="stocks_2358_volume_min_day">Объём в день от шт.</string>
    <string name="stocks_2358_volume_min_cash">Объём в день от млн. $</string>
    <string name="stocks_2358_purchase_volume">Общая сумма покупки в $</string>
    <string name="stocks_2358_purchase_time">Во сколько тарим? МСК</string>
    <string name="stocks_2358_take_profit_from">Заявка на продажу от в % (0.0 = не создавать)</string>
    <string name="stocks_2358_take_profit_to">Заявка на продажу до в % (0.0 = не создавать)</string>
    <string name="stocks_2358_take_profit_step">Количество заявок в равных долях</string>
    <string name="stocks_1000_sell_set_1">Набор 1 (SPCE -1.0 5 0.5 ентер)</string>
    <string name="stocks_1000_sell_set_2">Набор 2 (SPCE -1.0 5 0.5 ентер)</string>
    <string name="stocks_1000_sell_set_3">Набор 3 (SPCE -1.0 5 0.5 ентер)</string>
    <string name="stocks_1000_sell_set_4">Набор 4 (SPCE -1.0 5 0.5 ентер)</string>
    <string name="stocks_1000_sell_take_profit_depo">Базовый ТП на продажу из депо в %</string>
    <string name="stocks_1000_sell_take_profit_short">Базовый рост на шорт в %</string>
    <string name="stocks_1000_sell_take_profit_buy">Базовый ТП на откуп шорта в % (0.0 = не создавать)</string>
    <string name="stocks_1000_sell_order_lifetime_seconds_depo">Время жизни заявки: из депо (в секундах, 0 = не снимать)</string>
    <string name="stocks_1000_sell_order_lifetime_seconds_short">Время жизни заявки: шорт (в секундах, 0 = не снимать)</string>
    <string name="stocks_1000_sell_order_lifetime_seconds_buy">Время жизни заявки: откуп шорта (в секундах, 0 = не снимать)</string>
    <string name="stocks_1000_buy_set_1">Набор 1 (SPCE -1.0 5 0.5 ентер)</string>
    <string name="stocks_1000_buy_set_2">Набор 2 (SPCE -1.0 5 0.5 ентер)</string>
    <string name="stocks_1000_buy_set_3">Набор 3 (SPCE -1.0 5 0.5 ентер)</string>
    <string name="stocks_1000_buy_set_4">Набор 4 (SPCE -1.0 5 0.5 ентер)</string>
    <string name="stocks_1000_buy_purchase_volume">Базовая сумма покупки в $</string>
    <string name="stocks_1000_buy_take_profit_depo">Базовый ТП на откуп шорта из депо в %</string>
    <string name="stocks_1000_buy_take_profit_long">Базовая просадка на лонг в %</string>
    <string name="stocks_1000_buy_take_profit_sell">Базовый ТП на продажу лонга в % (0.0 = не создавать)</string>
    <string name="stocks_1000_buy_order_lifetime_seconds_depo">Время жизни заявки: из депо (в секундах, 0 = не снимать)</string>
    <string name="stocks_1000_buy_order_lifetime_seconds_long">Время жизни заявки: лонг (в секундах, 0 = не снимать)</string>
    <string name="stocks_1000_buy_order_lifetime_seconds_sell">Время жизни заявки: продажа лонга (в секундах, 0 = не снимать)</string>
    <string name="stocks_premarket_price_change_percent">Изменение от %</string>
    <string name="stocks_premarket_volume_min_day">Объём за день ОТ шт.</string>
    <string name="stocks_premarket_volume_max_day">Объём за день ДО шт.</string>
    <string name="stocks_premarket_only_love">Только избранные</string>
    <string name="stocks_premarket_only_morning">С 7 до 10 только утренние</string>
    <string name="stocks_1728_volume_min_each_steps">Объём каждого шага отсева от шт. (через пробел)</string>
    <string name="stocks_1728_price_change_steps">Изменение каждого шага цены от в % (через пробел)</string>
    <string name="stocks_1728_purchase_volume">Сумма покупки одной позиции в $</string>
    <string name="stocks_1728_take_profit">Заявка на продажу в % (0.0 = не создавать)</string>
    <string name="stocks_1728_trailing_stop">Трейлинг тейк</string>
    <string name="stocks_1728_calc_from_os">Отсчёт с конца ОС</string>
    <string name="stocks_love_set">Набор избранных (тикеры через пробел)</string>
    <string name="stocks_black_set">Чёрный список (тикеры через пробел)</string>
    <string name="stocks_tazik_set_1">Набор 1 (тикеры через пробел)</string>
    <string name="stocks_tazik_set_2">Набор 2 (тикеры через пробел)</string>
    <string name="stocks_tazik_set_3">Набор 3 (тикеры через пробел)</string>
    <string name="stocks_tazik_min_percent_to_buy">Минимальная просадка в %</string>
    <string name="stocks_tazik_min_volume">Реагировать на объём от шт.</string>
</resources>