<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_settings"
            android:checked="true"
            android:icon="@drawable/ic_settings"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_portfolio"
            app:iconTint="@drawable/selector"
            android:icon="@drawable/ic_portfolio"
            android:title="@string/menu_portfolio" />
        <item
            android:id="@+id/nav_1000_sell_start"
            android:icon="@drawable/ic_1000"
            android:title="@string/menu_1000_sell" />
        <item
            android:id="@+id/nav_1000_buy_start"
            android:icon="@drawable/ic_1000"
            android:title="@string/menu_1000_buy" />
        <item
            android:id="@+id/nav_tazik_start"
            android:icon="@drawable/ic_tazik"
            android:title="@string/menu_tazik" />
        <item
            android:id="@+id/nav_premarket"
            android:icon="@drawable/ic_glass"
            android:title="@string/menu_premarket" />
        <item
            android:id="@+id/nav_1728"
            android:icon="@drawable/ic_1728"
            android:title="@string/menu_1728" />
        <item
            android:id="@+id/nav_2358_start"
            android:icon="@drawable/ic_2358"
            android:title="@string/menu_2358" />
        <item
            android:id="@+id/nav_fixprice"
            android:icon="@drawable/ic_1728"
            android:title="@string/menu_fixprice" />
        <item
            android:id="@+id/nav_reports"
            android:icon="@drawable/ic_reports"
            android:title="@string/menu_reports" />

        <item
            android:id="@+id/nav_postmarket"
            android:icon="@drawable/ic_stocks"
            android:title="@string/menu_postmarket" />

<!--        <item-->
<!--            android:id="@+id/nav_shorts"-->
<!--            android:icon="@drawable/ic_stocks"-->
<!--            android:title="@string/menu_shorts" />-->

        <item
            android:id="@+id/nav_blacklist"
            android:icon="@drawable/ic_trash"
            android:title="@string/menu_blacklist" />

        <item
            android:id="@+id/nav_diagnostics"
            android:icon="@drawable/ic_settings"
            android:title="@string/menu_diagnostics" />

<!--        <item-->
<!--            android:id="@+id/nav_rocket_start"-->
<!--            android:icon="@drawable/ic_1000"-->
<!--            android:title="@string/menu_rocket" />-->

    </group>
</menu>