<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_portfolio">

    <!-- настройки -->
    <fragment
        android:id="@+id/nav_settings"
        android:name="com.project.ti2358.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@xml/fragment_settings" />

    <!-- депозит -->
    <fragment
        android:id="@+id/nav_portfolio"
        android:name="com.project.ti2358.ui.portfolio.PortfolioFragment"
        android:label="@string/menu_portfolio"
        tools:layout="@layout/fragment_portfolio" >
        <action
            android:id="@+id/action_nav_portfolio_to_nav_orders"
            app:destination="@id/nav_orders" />
        <action
            android:id="@+id/action_nav_portfolio_to_nav_orderbook"
            app:destination="@id/nav_orderbook" />
    </fragment>

    <!-- заявки -->
    <fragment
        android:id="@+id/nav_orders"
        android:name="com.project.ti2358.ui.orders.OrdersFragment"
        android:label="@string/menu_orders"
        tools:layout="@layout/fragment_orders_item_list" />

    <!-- отчёты -->
    <fragment
        android:id="@+id/nav_reports"
        android:name="com.project.ti2358.ui.strategyReports.ReportsFragment"
        android:label="@string/menu_reports"
        tools:layout="@layout/fragment_reports" />

    <!-- чёрный список -->
    <fragment
        android:id="@+id/nav_blacklist"
        android:name="com.project.ti2358.ui.blacklist.BlacklistFragment"
        android:label="@string/menu_blacklist"
        tools:layout="@layout/fragment_blacklist" />

    <!-- шорты -->
    <fragment
        android:id="@+id/nav_shorts"
        android:name="com.project.ti2358.ui.strategyShorts.StrategyShortsFragment"
        android:label="@string/menu_shorts"
        tools:layout="@layout/fragment_shorts" />

    <!-- стакан -->
    <fragment
        android:id="@+id/nav_orderbook"
        android:name="com.project.ti2358.ui.orderbook.OrderbookFragment"
        android:label="@string/menu_orderbook"
        tools:layout="@layout/fragment_orderbook" />

    <!-- премаркет РФ -->
    <fragment
        android:id="@+id/nav_premarket"
        android:name="com.project.ti2358.ui.premarket.PremarketFragment"
        android:label="@string/menu_premarket"
        tools:layout="@layout/fragment_premarket" >
        <action
            android:id="@+id/action_nav_premarket_to_nav_orderbook"
            app:destination="@id/nav_orderbook" />
    </fragment>

    <!-- постмаркет US -->
    <fragment
        android:id="@+id/nav_postmarket"
        android:name="com.project.ti2358.ui.postmarket.PostmarketFragment"
        android:label="@string/menu_postmarket"
        tools:layout="@layout/fragment_postmarket" />

    <!-- 2358 -->

    <fragment
        android:id="@+id/nav_2358_start"
        android:name="com.project.ti2358.ui.strategy2358.Strategy2358StartFragment"
        android:label="@string/menu_2358"
        tools:layout="@layout/fragment_2358_start" >
        <action
            android:id="@+id/action_nav_2358_start_to_nav_2358_finish"
            app:destination="@id/nav_2358_finish"
            app:enterAnim="@animator/slide_in_right"
            app:exitAnim="@animator/slide_out_left"
             />
    </fragment>

    <fragment
        android:id="@+id/nav_2358_finish"
        android:name="com.project.ti2358.ui.strategy2358.Strategy2358FinishFragment"
        android:label="@string/menu_2358"
        tools:layout="@layout/fragment_2358_start" />

    <!-- fixprice -->

    <fragment
        android:id="@+id/nav_fixprice"
        android:name="com.project.ti2358.ui.strategyFixPrice.StrategyFixPriceFragment"
        android:label="@string/menu_fixprice"
        tools:layout="@layout/fragment_fixprice" >
    </fragment>

    <!-- 1728 -->

    <fragment
        android:id="@+id/nav_1728"
        android:name="com.project.ti2358.ui.strategy1728.Strategy1728Fragment"
        android:label="@string/menu_1728"
        tools:layout="@layout/fragment_1728" >
    </fragment>

    <!-- Rockets -->

    <fragment
        android:id="@+id/nav_rocket_start"
        android:name="com.project.ti2358.ui.strategyRocket.StrategyRocketStartFragment"
        android:label="@string/menu_rocket"
        tools:layout="@layout/fragment_rocket_start" >
        <action
            android:id="@+id/action_nav_rocket_start_to_nav_rocket_finish"
            app:destination="@id/nav_rocket_finish"
            app:enterAnim="@animator/slide_in_right"
            app:exitAnim="@animator/slide_out_left"
            />
    </fragment>

    <fragment
        android:id="@+id/nav_rocket_finish"
        android:name="com.project.ti2358.ui.strategyRocket.StrategyRocketFinishFragment"
        android:label="@string/menu_rocket"
        tools:layout="@layout/fragment_rocket_finish" />

    <!-- 1000 Sell -->

    <fragment
        android:id="@+id/nav_1000_sell_start"
        android:name="com.project.ti2358.ui.strategy1000Sell.Strategy1000SellStartFragment"
        android:label="@string/menu_1000_sell"
        tools:layout="@layout/fragment_1000_sell_start" >
        <action
            android:id="@+id/action_nav_1000_sell_start_to_nav_1000_sell_finish"
            app:destination="@id/nav_1000_sell_finish"
            app:enterAnim="@animator/slide_in_right"
            app:exitAnim="@animator/slide_out_left"
            app:popUpToInclusive="true"
            />
    </fragment>

    <fragment
        android:id="@+id/nav_1000_sell_finish"
        android:name="com.project.ti2358.ui.strategy1000Sell.Strategy1000SellFinishFragment"
        android:label="@string/menu_1000_sell"
        tools:layout="@layout/fragment_1000_sell_start" >
    </fragment>

    <!-- 1000 Buy -->

    <fragment
        android:id="@+id/nav_1000_buy_start"
        android:name="com.project.ti2358.ui.strategy1000Buy.Strategy1000BuyStartFragment"
        android:label="@string/menu_1000_buy"
        tools:layout="@layout/fragment_1000_buy_start" >
        <action
            android:id="@+id/action_nav_1000_buy_start_to_nav_1000_buy_finish"
            app:destination="@id/nav_1000_buy_finish"
            app:enterAnim="@animator/slide_in_right"
            app:exitAnim="@animator/slide_out_left"
            />
    </fragment>

    <fragment
        android:id="@+id/nav_1000_buy_finish"
        android:name="com.project.ti2358.ui.strategy1000Buy.Strategy1000BuyFinishFragment"
        android:label="@string/menu_1000_buy"
        tools:layout="@layout/fragment_1000_buy_start" />

    <!-- tazik -->

    <fragment
        android:id="@+id/nav_tazik_start"
        android:name="com.project.ti2358.ui.strategyTazik.StrategyTazikStartFragment"
        android:label="@string/menu_tazik"
        tools:layout="@layout/fragment_tazik_start" >
        <action
            android:id="@+id/action_nav_tazik_start_to_nav_tazik_finish"
            app:destination="@id/nav_tazik_finish"
            app:enterAnim="@animator/slide_in_right"
            app:exitAnim="@animator/slide_out_left"
            />
    </fragment>

    <fragment
        android:id="@+id/nav_tazik_finish"
        android:name="com.project.ti2358.ui.strategyTazik.StrategyTazikFinishFragment"
        android:label="@string/menu_tazik"
        tools:layout="@layout/fragment_tazik_start" />

    <!-- diagnostics -->
    <fragment
        android:id="@+id/nav_diagnostics"
        android:name="com.project.ti2358.ui.diagnostics.DiagnosticsFragment"
        android:label="@string/menu_diagnostics"
        tools:layout="@layout/fragment_diagnostics" />
</navigation>