<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent" android:layout_height="fill_parent">


    <SearchView
        android:id="@+id/search_view"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="0dp"
        android:layout_alignParentTop="true"
        android:queryHint="Поиск $"
        android:iconifiedByDefault="false"/>

    <androidx.recyclerview.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginBottom="65dp"
        android:layout_marginTop="50dp"
        app:layoutManager="LinearLayoutManager"
        tools:listitem="@layout/fragment_1000_sell_start_item" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="80dp"
        android:layout_marginBottom="65dp"
        android:layout_alignParentBottom="true"
        android:weightSum="4" >
        <Button
            android:layout_height="70dp"
            android:id="@+id/set1_button"
            android:layout_marginRight="5dp"
            android:text="@string/set_1"
            android:layout_weight="1"
            android:textSize="20dp"
            android:layout_width="0dp" />

        <Button
            android:layout_height="70dp"
            android:id="@+id/set2_button"
            android:layout_marginRight="5dp"
            android:text="@string/set_2"
            android:layout_weight="1"
            android:textSize="20dp"
            android:layout_width="0dp" />

        <Button
            android:layout_height="70dp"
            android:id="@+id/set3_button"
            android:layout_marginRight="5dp"
            android:text="@string/set_3"
            android:layout_weight="1"
            android:textSize="20dp"
            android:layout_width="0dp" />

        <Button
            android:layout_height="70dp"
            android:id="@+id/set4_button"
            android:text="@string/set_4"
            android:layout_weight="1"
            android:textSize="20dp"
            android:layout_width="0dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_alignParentBottom="true"
        android:weightSum="2" >
        <Button
            android:layout_height="70dp"
            android:id="@+id/update_button"
            android:layout_marginRight="5dp"
            android:text="@string/update"
            android:layout_weight="1"
            android:textSize="16dp"
            android:layout_width="0dp" />

        <Button
            android:layout_height="70dp"
            android:id="@+id/start_button"
            android:layout_marginLeft="5dp"
            android:text="@string/service_2358_prepare"
            android:layout_weight="1"
            android:textSize="16dp"
            android:layout_width="0dp" />
    </LinearLayout>

</RelativeLayout>